@@ -94,7 +94,6 @@ App::supertouch                                = 0.02
 App::whichdll                                  = 0.03
 Archive::Ar::Libarchive                        = 2.08
 Archive::Libarchive::Any                       = 0.0900
-Archive::Libarchive::FFI                       = 0.0901
 Archive::Libarchive::XS                        = 0.0902
 Browser::Start                                 = 0.01
 Class::Inspector                               = 1.36
@@ -131,7 +130,6 @@ FFI::Platypus::Type::Enum                      = 0.03
 FFI::Platypus::Type::PtrObject                 = 0.02
 FFI::TinyCC                                    = 0.29
 FFI::TinyCC::Inline                            = 0.28
-FFI::Util                                      = 0.17
 File::LibMagic::FFI                            = 0.04
 File::Listing::Ftpcopy                         = 0.09
 File::ShareDir::Dist                           = 0.07
@@ -139,7 +137,6 @@ File::Which                                    = 1.23
 Kafka::Librd                                   = 0.15
 Lingua::Alphabet::Phonetic::LAPD               = 0.02
 Log::Log4perl::Appender::TAP                   = 0.04
-Module::Build::FFI                             = 0.52
 Mojolicious::Plugin::Ident                     = 0.31
 Mojolicious::Plugin::TtRenderer                = 1.60
 NewFangle                                      = 0.02
